# transcricao_video_ia

./: README.md  manage.py  pyproject.toml
app/: main.py
core/: views.py
core/ia/: main.py
core/templates/: index.html
transcricao_ia/: asgi.py  settings.py  urls.py  wsgi.py
