[tool.poetry]
name = "transcricao-video-ia"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.7"
langchain-huggingface = "^0.1.2"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.9"
langchain-groq = "^0.2.1"
pytube = "^15.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
